# Template-1

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  first-action.yml
app/inc/: LedController.h
app/src/: LedController.c  main.c
drivers/inc/: LedDriver.h  TLC5973.h
drivers/src/: LedDriver.c  TLC5973.c
interfaces/: iLed.h
mocks/inc/: LedMockDevice.h
mocks/src/: LedMockDevice.c
tests/app/: LedController_Test.cpp
util/: common.h
